# blackjack-with-tests

./: .gitignore  CMakeLists.txt  README.md  main.cpp
DeckLoader/: CMakeLists.txt  IDeckLoader.h  TextDeckLoader.cpp  TextDeckLoader.h
DeckLoader/Test/: CMakeLists.txt  TextDeckLoaderTest.cpp
DeckLoader/Test/Mock/: DeckLoaderMock.h
GameCore/: BlackjackGame.cpp  BlackjackGame.h  CMakeLists.txt  Customplayer.cpp  Customplayer.h  GameController.cpp  GameController.h  IGameModel.h  IGameView.h  IPlayer.h  Safeplayer.cpp  Safeplayer.h  card.h
GameCore/CustomplayerTest/: CMakeLists.txt  CustomplayerTests.cpp
GameCore/SafeplayerTest/: CMakeLists.txt  SafeplayerTests.cpp
GameCore/test/: BlackjackGameTest.cpp  BlackjackGameTestWithPlayer.cpp  CMakeLists.txt  GameControllerTest.cpp
GameCore/test/mock/: GameModelMock.h  GameViewMock.h  PlayerMock.h
